# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## Unreleased

## [0.7.0]

### Added

- **breaking** DHCP Inform message variant

### Changed

- bug in `set_chaddr` where `hlen` was not set

## [0.6.0]

### Added

- methods for `dhcpv6::UnknownOption` & `RelayMsg`

### Changed

- exposed some dhcpv6 opt fields as `pub`
- `InterfaceId` type changed from `String` to `Vec<u8>`
- `VendorClass`/`UserClass` changed to `Vec<Vec<u8>>`

### Removed

- `ElapsedTime` and `Preference`

## [0.5.0]

### Added

- added `clear`/`is_empty`/`retain` to v4 opts & relay agent sub-opts

### Fixed

- **breaking** options enum for `v4::DhcpOption` was decoding into the wrong variants for a few types

## [0.4.1]

### Added

- expose methods so one can actually create RelayInfo/RelayAgentInformation
- methods to get the data out of various Unknown variants for opts/relay
- added option 118 subnet selection
- return impl Iterator for relay/opt iterator methods
- more docs for opts/relay info

### Changed

- `DhcpOption` variants added for v4
- some opt method return types have changed `iter()`/`iter_mut()`

## [0.3.0]

### Added

### Changed

- `sname`/`fname` types changed from `String` to `[u8]`
- perf improved for `Decoder`